fix(home): Fix horizontal scroll explore section
Smaller screen size media query

--- a/css/cards.css
+++ b/css/cards.css
@@ -246,7 +246,7 @@ background-image: var(--card-img-internship);
 }
 
 
-@media (max-width: 77em) {
+@media (max-width: 55em) {
     .product-card__container-wide {
       flex-direction: column;
     }
